k8s/backend/context-broker-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: context-broker
  namespace: astrid-kube
spec:
  selector:
    matchLabels:
      app: context-broker
  replicas: 1
  template:
    metadata:
      labels:
        app: context-broker
    spec:
      containers:
      - name: cb-manager
        image: astridproject/cb-manager:master
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: node
          mountPath: /node

      - name: zookeeper
        image: digitalwonderland/zookeeper
        ports:
        - containerPort: 2181
        volumeMounts:
        - name: node
          mountPath: /node

      - name: kafka
        image: bitnami/kafka:latest
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: node
          mountPath: /node

      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.8.0
        ports:
        - containerPort: 5144
        securityContext:
          runAsUser: 0
        volumeMounts:
          - name: logstash-config
            mountPath: /usr/share/logstash/config/
          - name: logstash-pipeline
            mountPath: /usr/share/logstash/pipeline/
          - name: node
            mountPath: /node

      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 9200

        volumeMounts:
        - name: elasticsearch-config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: elasticsearch-data
          mountPath: /usr/share/elasticsearch/data/
        - name: node
          mountPath: /node

#      - name: elasticsearch-data-permission-fix
#        image: busybox
#        command:
#        - "sh"
#        - "-c"
#        - "/bin/mkdir -p /node/mnt/elasticsearch-data ; /bin/chmod -R 777 /node/mnt/elasticsearch-data"
#        securityContext:
#          runAsUser: 0
#        volumeMounts:
#        - name: node
#          mountPath: /node/
#
#      securityContext:
#        runAsUser: 0
#        runAsGroup: 0
#        fsGroup: 0

      volumes:
      - name: node
        hostPath:
          path: /
      - name: logstash-config
        configMap:
          name: logstash-config
          items:
          - key: log4j2.properties
            path: log4j2.properties
          - key: logstash.yml
            path: logstash.yml
          - key: pipelines.yml
            path: pipelines.yml
      - name: logstash-pipeline
        configMap:
          name: logstash-pipeline
          items:
          - key: data.conf
            path: data.conf
          - key: event.conf
            path: event.conf
          - key: proxy-data.conf
            path: proxy-data.conf
          - key: packetbeat-data.conf
            path: packetbeat-data.conf
      - name: elasticsearch-config
        configMap:
          name: elasticsearch-config
          items:
          - key: elasticsearch.yml
            path: elasticsearch.yml
      - name: elasticsearch-data
        persistentVolumeClaim:
          claimName: elasticsearch-pv-claim
